added some support for manned launches
Former-commit-id: 7681a8c95e627a9d676acdce5bd771ebd1f958f1 [formerly 29d3612a223a3c2a02277883147d19b253cd2efa]
Former-commit-id: 26b53ae41df1014ee7f3de6c1a1d50f9dd9b2d92

--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -36,16 +36,16 @@ color: red;
 color: blue;
 }
 html, body {
-    height: 97%;
+height: 97%;
 }
 .dynamic {
-    min-height: 40%;
-    height: auto !important;
-    height: 100%;
-    margin: 0 auto -90px;
+min-height: 40%;
+height: auto !important;
+height: 100%;
+margin: 0 auto -90px;
 }
 .footer, .push {
-    height: 90px;
+height: 90px;
 }
   </style>
 </head>
@@ -83,6 +83,7 @@ html, body {
         </script>
 <p id="devWarning">If you are reading this paragraph, you have a development version of the game.<br>Do not expect anything to work</p>
 <p style="float: right" id="note"></p>
+<p style="float: right" id="toolsMenu"></p>
 <div id="navigation" style="float:left;padding-right:20px">
   <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="science();tolk('rd');command='rd'">R&amp;D</div>
   <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('launch');command='launch'">Launch</div>
@@ -102,7 +103,7 @@ html, body {
 <br>
 <!--dynamic content-->
 <div class="dynamic">
-<p id="c0"></p><p id="c1"></p><p id="c2"></p><p id="c3"></p><p id="c4"></p><p id="c5"></p><p id="c6"></p><p id="c7"></p><p id="c8"></p><p id="c9"></p><p id="c10"></p><p id="c11"></p><p id="c12"></p><p id="c13"></p><p id="c14"></p><p id="c15"></p><p id="c16"></p><p id="c17"></p><p id="c18"></p><p id="c19"></p>
+<p id="c0">Welcome to the browsergame!</p><p id="c1"></p>Here, the goal is to build a base on the Moon.<br>To accomplish that, you must research new technology, buy hardware, and navigate through space.<br>You have a lot of things to manage, each one available from the white menu.<p id="c2"></p><p id="c3"></p><p id="c4"></p><p id="c5"></p><p id="c6"></p><p id="c7"></p><p id="c8"></p><p id="c9"></p><p id="c10"></p><p id="c11"></p><p id="c12"></p><p id="c13"></p><p id="c14"></p><p id="c15"></p><p id="c16"></p><p id="c17"></p><p id="c18"></p><p id="c19"></p>
   <div class="push"></div>
 </div>
 <!--footer-->
