--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -103,7 +103,7 @@ height: 90px;
 <br>
 <!--dynamic content-->
 <div class="dynamic">
-<p id="c0">Welcome to the browsergame!</p><p id="c1"></p>Here, the goal is to build a base on the Moon.<br>To accomplish that, you must research new technology, buy hardware, and navigate through space.<br>You have a lot of things to manage, each one available from the white menu.<p id="c2"></p><p id="c3"></p><p id="c4"></p><p id="c5"></p><p id="c6"></p><p id="c7"></p><p id="c8"></p><p id="c9"></p><p id="c10"></p><p id="c11"></p><p id="c12"></p><p id="c13"></p><p id="c14"></p><p id="c15"></p><p id="c16"></p><p id="c17"></p><p id="c18"></p><p id="c19"></p>
+<p id="c0">Welcome to the browsergame!<br><br>Here, the goal is to build a base on the Moon.<br>To accomplish that, you must research new technology, buy hardware, and navigate through space.<br>You have a lot of things to manage, each one available from the white menu.</p><p id="c1"></p><p id="c2"></p><p id="c3"></p><p id="c4"></p><p id="c5"></p><p id="c6"></p><p id="c7"></p><p id="c8"></p><p id="c9"></p><p id="c10"></p><p id="c11"></p><p id="c12"></p><p id="c13"></p><p id="c14"></p><p id="c15"></p><p id="c16"></p><p id="c17"></p><p id="c18"></p><p id="c19"></p>
   <div class="push"></div>
 </div>
 <!--footer-->
