--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
   				<ul>
   					<li><a href="index.html#colony">Colony Phase 1</a>
   					</li>
-  					<li><a href="index.html#mission1">Mission 1</a>
-  					</li>
-  					<li><a href="index.html#mission2">Mission 2</a>
-  					</li>
+  					<li><a href="index.html#sketchfab">3d tours</a></li>
   				</ul>
   			</li>
   			<li><a href="planning.html">Plan</a>
@@ -429,7 +426,7 @@
 		 </div>
 	 </div>
 	<br>
-	<div>
+	<div id="sketchfab">
 					<p class="black roundAll col-10c12">
 						The Sketchfab 3d models below can be navigated using the buttons that appears in their bottom right corner when they load, after clicking the 'play' arrow. 
 						Take the tour through them with the Annotations buttons, to see explanations. Double click / tap anywhere on the models to make that spot the pivot point, then when you click-drag the 
