pause button added
Former-commit-id: a3bcb65e30e223e4b1801616c81faf91764aa4d5 [formerly 412fed602ca15296de9f1c51d63aa3cc3db4138d]
Former-commit-id: 7f727105325486e5748aa26d3513e12e1fd05006

--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -95,7 +95,7 @@ height: 90px;
 <!--controllers-->
 <div>
   <p id="timing" style="color: #b09985">0</p>
-  <p><span id="toggle1" class="fastforward" onclick="this.style.background='red';acceleration(1)"><b>></b></span> <span id="toggle2" class="fastforward" onclick="this.style.background='red';acceleration(5)"><b>>></b></span> <span id="toggle3" class="fastforward" onclick="this.style.background='red';acceleration(25)"><b>>>></b></span></p>
+  <p><span id="toggle0" class="fastforward" onclick="this.style.background='red';acceleration(0)"><b>||</b></span> <span id="toggle1" class="fastforward" onclick="this.style.background='red';acceleration(1)"><b>></b></span> <span id="toggle2" class="fastforward" onclick="this.style.background='red';acceleration(5)"><b>>></b></span> <span id="toggle3" class="fastforward" onclick="this.style.background='red';acceleration(25)"><b>>>></b></span></p>
   <p id="budget">Budget: <span style="color: #e02200">1000</span></p>
   <span id="toggelino" onclick="toggleCommand()" class="blue" onmouseover="this.style.background='#202040';" onmouseout="this.style.background='black';">Show command line</span>
   <span id="hidden"></span>
