--- a/browsergame/tutorial.html
+++ b/browsergame/tutorial.html
@@ -24,9 +24,9 @@ Other important places are "launch", "shop" and TBD.
 Be careful about how much money you spend. You can go below zero, but then a 1% fine is added every 5 time unit.<br>
 Your budget is shown in red below the current time.</p>
 <h4>Time</h4>
-<p>The current time is shown in grey. You can fast forward with the buttons below it.</p>
+<p>The current time is shown in grey. You can fast forward with the buttons below it, or set the game on pause.</p>
 <h4>In short</h4>
-<p>Buy parts, stick them together, and launch into space.<br>Then navigate towards the Moon, land and build a base.<br>That is not more complicated than in real life.</p>
+<p>Buy parts, stick them together, and launch them into space.<br>Then navigate towards the Moon, land and build a base.<br>That is not more complicated than in real life.</p>
 <h4>Interacting with the game</h4>
 <p>As for now, the game has few graphical elements, and HTML is only used as a framework for multiple "views", structured as menus. Most actions are performed by clicking on blue words. (And if the background of a word changes when you hoover over it, you can probably click it too.)</p>
 <p><a href="shell.html">Back to the game</a></p>
