--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -17,6 +17,12 @@ Media should be inside a folder named "images", and consist of the following fil
 	"moon.gif"
 	"deltamap.jpg"  //created by Hollister David (I must remember to ask him for permission before release of the game.)
 	"TBD.mp3"	//game music. Not yet created, but I am planning to ask David Phan if he wants to compose something
+
+If you run Linux:
+
+You can save some time by downloading this install script: https://raw.githubusercontent.com/briligg/moonwards/gh-pages/browsergame/install.sh
+Make it executable, and run it with sudo to make an offline install.
+
 -->
   <style>
 .fastforward{
@@ -112,10 +118,10 @@ height: 90px;
   <img src="images/hoh.gif" onclick="(tolk('about'))" onmouseover="this.style.transform='rotateZ(12deg)'" onmouseout="this.style.transform='rotateZ(0deg)'">
   <p>This game is free software, licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.html">General Public License, version 3</a></p>
 </div>
-</body>
 <!--The following scripts are for handling basic events-->
 <script type="text/javascript" src="core.js"></script>
 <script type="text/javascript" src="scen.js"></script>
 <script type="text/javascript" src="eventchain.js"></script>
 <script type="text/javascript" src="stuff.js"></script>
+</body>
 </html>
