--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -18,7 +18,7 @@ Media should be inside a folder named "images", and consist of the following fil
 	"deltamap.jpg"  //created by Hollister David (I must remember to ask him for permission before release of the game.)
 	"TBD.mp3"	//game music. Not yet created, but I am planning to ask David Phan if he wants to compose something
 
-If you run Linux:
+If you are running Linux:
 
 You can save some time by downloading this install script: https://raw.githubusercontent.com/briligg/moonwards/gh-pages/browsergame/install.sh
 Make it executable, and run it with sudo to make an offline install.
@@ -101,7 +101,7 @@ height: 90px;
 <!--controllers-->
 <div>
   <p id="timing" style="color: #b09985">0</p>
-  <p><span id="toggle0" class="fastforward" onclick="this.style.background='red';acceleration(0)"><b>||</b></span> <span id="toggle1" class="fastforward" onclick="this.style.background='red';acceleration(1)"><b>></b></span> <span id="toggle2" class="fastforward" onclick="this.style.background='red';acceleration(5)"><b>>></b></span> <span id="toggle3" class="fastforward" onclick="this.style.background='red';acceleration(25)"><b>>>></b></span></p>
+  <p><span id="toggle0" class="fastforward" onclick="acceleration(0)"><b>||</b></span> <span id="toggle1" class="fastforward" onclick="acceleration(1)"><b>></b></span> <span id="toggle5" class="fastforward" onclick="acceleration(5)"><b>>></b></span> <span id="toggle25" class="fastforward" onclick="acceleration(25)"><b>>>></b></span></p>
   <p id="budget">Budget: <span style="color: #e02200">1000</span></p>
   <span id="toggelino" onclick="toggleCommand()" class="blue" onmouseover="this.style.background='#202040';" onmouseout="this.style.background='black';">Show command line</span>
   <span id="hidden"></span>
