--- a/planning.html
+++ b/planning.html
@@ -50,10 +50,6 @@
   				<ul>
   					<li><a href="index.html#colony">Colony Phase 1</a>
   					</li>
-  					<li><a href="index.html#mission1">Mission 1</a>
-  					</li>
-  					<li><a href="index.html#mission2">Mission 2</a>
-  					</li>
   				</ul>
   			</li>
   			<li><a href="planning.html">Plan</a>
@@ -72,7 +68,11 @@
   					<li><a href="why.html#about">About Us</a></li>
   				</ul>
   			</li>
-  			<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
+  			<li>Talk</li>
+  				<ul>
+  				<li><a href="http://moonwards1.blogspot.mx/" >Blog</a></li>
+  					<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
+  				</ul>
   		</ul>
   		</div>
   	</nav>
