--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
   					<li><a href="why.html#about">About Us</a></li>
   				</ul>
   			</li>
-  			<li>Talk</li>
+  			<li><a href="http://moonwards1.blogspot.mx/">Talk</a>
   				<ul>
-  				<li><a href="http://moonwards1.blogspot.mx/" >Blog</a></li>
+  				<li><a href="http://moonwards1.blogspot.mx/">Blog</a></li>
   					<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
   				</ul>
+  			</li>
   		</ul>
   		</div>
   	</nav>
