--- a/learn.html
+++ b/learn.html
@@ -331,7 +331,7 @@ $$v_e=\sqrt{\frac{2\mu}{r}}$$
 			How can we achieve that? The answer is naturally to get a velocity higher than the escape velocity. But how exactly does that relate to the final velocity we end up with once we have escaped?
 			Behold. The Pythagoras formula of orbital mechanics:
 			</p>
-			<img class="realsize" src="img/orbitalPythagoras.png">
+			<img class="realsize" src="img/orbitalPythagoras.png" width="415" height="257">
 		    </div>
 		</div>
 		</div>
