redo intro paragraph
Former-commit-id: 7a6852a236257e7118d86945e8a3172cba14c1db [formerly 5a7a812c2d5d10b5cdbfd8d96c4fd76f786d1a6d]
Former-commit-id: 200ab8ab3781bf652a2f6bf7fe11c18539b77a6b

--- a/index.html
+++ b/index.html
@@ -87,18 +87,19 @@
     </div>
     <div class="rowR pix">
      		<p class="col-9r12 col-m-10r12 black roundLeft">
-     		Here you will see what a focused drive to settle the Moon would create.  
-     		That future colony 
+     		Here you will see what a focused drive to settle the Moon can create.  
+     		The first colony 
      		will fundamentally change the way humanity sees itself and its place in the universe. 
      		We don't seek that future only because we don't see its potential.  
      		Cernan's Promise<sup class="yellow tooltipTL">[1]
      		<span style="font-size: 1.3em; line-height: 1.3em;">"We leave as we came and, God willing, as we shall return: with 
      		peace and hope for all mankind" - Gene Cernan, as he stepped off the Moon, Apollo 17, Dec 19, 1972</span></sup> is 
-     		going to change that. <br><br>
-     		It will be a detailed virtual model of that colony where visitors can act out all of its construction, operations, 
-     		and daily life. It will realistically reference science and technology we already have to present a colony that 
+     		to change that. <br><br>
+     		We are building a detailed virtual model of a lunar colony, where visitors can act out all of its construction, operations, 
+     		and daily life. Its design will be something that could really be built with technology in our reach, 
+     		and would really work just as presented. Visitors will experience a colony that 
      		is profitable and growing, headed towards status as an important independent economy, ecosystem, and culture.  
-     		When visitors get a sense of that future, the will understand why it matters. Once enough of us understand that, 
+     		When people get a sense of that future, the will understand why it matters. Once enough of us understand that, 
      		we will act. We will settle the Moon, and cross perhaps the most important threshold in human history since we 
      		mastered fire.
      		</p>
