--- a/learn.html
+++ b/learn.html
@@ -164,7 +164,7 @@ subDraw = function(){
 	subctx.beginPath();
 	subctx.drawImage(moonMap,0,0);
 	subctx.strokeStyle = "#FF0000";
-	subctx.fillStyle = "#0000F0";
+	subctx.fillStyle = "#0000EF";
 	subctx.font = "20px Arial";
 	subctx.lineWidth = 3;
 	subctx.moveTo(256+256*(longitude1)/180-12,128-128*latitude1/90);
