--- a/learn.html
+++ b/learn.html
@@ -192,11 +192,11 @@ function checkIfMove(event1){
 //	alert("debug");
 	var move1Flagg = false;
 	var move2Flagg = false;
-	alert(event1.pageX+","+rect.left+","+event1.pageY+","+rect.top+",");
-	if(Math.abs(toLongitude(event1.pageX-rect.left)-longitude1) < 20 && Math.abs(toLatitude(event1.pageY-rect.top)-latitude1) < 20){
+	alert(event1.pageX-window.pageXOffset+","+rect.left+","+event1.pageY-window.pageYOffset+","+rect.top+",");
+	if(Math.abs(toLongitude(event1.pageX-window.pageXOffset-rect.left)-longitude1) < 20 && Math.abs(toLatitude(event1.pageY-window.pageYOffset-rect.top)-latitude1) < 20){
 		move1Flagg = true;
 	}
-	else if(Math.abs(toLongitude(event1.pageX-rect.left)-longitude2) < 20 && Math.abs(toLatitude(event1.pageY-rect.top)-latitude2) < 20){
+	else if(Math.abs(toLongitude(event1.pageX-window.pageXOffset-rect.left)-longitude2) < 20 && Math.abs(toLatitude(event1.pageY-window.pageYOffset-rect.top)-latitude2) < 20){
 		move2Flagg = true;
 	};
 	if(move1Flagg || move2Flagg){
@@ -208,14 +208,14 @@ function checkIfMove(event1){
 		};
 		subOrbitalCanvas.onclick = fixPosition;
 		function handleMouseMove1(event){
-			longitude1 = toLongitude(event.pageX-rect.left);
-			latitude1 = toLatitude(event.pageY-rect.top);
+			longitude1 = toLongitude(event.pageX-window.pageXOffset-rect.left);
+			latitude1 = toLatitude(event.pageY-window.pageYOffset-rect.top);
 			subDraw();
 			subHop();
 		};
 		function handleMouseMove2(event){
-			longitude2 = toLongitude(event.pageX-rect.left);
-			latitude2 = toLatitude(event.pageY-rect.top);
+			longitude2 = toLongitude(event.pageX-window.pageXOffset-rect.left);
+			latitude2 = toLatitude(event.pageY-window.pageYOffset-rect.top);
 			subDraw();
 			subHop();
 		};
