--- a/learn.html
+++ b/learn.html
@@ -192,8 +192,8 @@ function checkIfMove(event1){
 //	alert("debug");
 	var move1Flagg = false;
 	var move2Flagg = false;
-	alert(event1.pageX-window.pageXOffset+","+rect.left+","+event1.pageY-window.pageYOffset+","+rect.top+",");
-	if(Math.abs(toLongitude(event1.pageX-window.pageXOffset-rect.left)-longitude1) < 20 && Math.abs(toLatitude(event1.pageY-window.pageYOffset-rect.top)-latitude1) < 20){
+	alert((event1.pageX-window.pageXOffset)+","+rect.left+","+(event1.pageY-window.pageYOffset)+","+rect.top+",");
+	if(Math.ab)s(toLongitude(event1.pageX-window.pageXOffset-rect.left)-longitude1) < 20 && Math.abs(toLatitude(event1.pageY-window.pageYOffset-rect.top)-latitude1) < 20){
 		move1Flagg = true;
 	}
 	else if(Math.abs(toLongitude(event1.pageX-window.pageXOffset-rect.left)-longitude2) < 20 && Math.abs(toLatitude(event1.pageY-window.pageYOffset-rect.top)-latitude2) < 20){
