--- a/learn.html
+++ b/learn.html
@@ -193,7 +193,7 @@ function checkIfMove(event1){
 	var move1Flagg = false;
 	var move2Flagg = false;
 	alert((event1.pageX-window.pageXOffset)+","+rect.left+","+(event1.pageY-window.pageYOffset)+","+rect.top+",");
-	if(Math.ab)s(toLongitude(event1.pageX-window.pageXOffset-rect.left)-longitude1) < 20 && Math.abs(toLatitude(event1.pageY-window.pageYOffset-rect.top)-latitude1) < 20){
+	if(Math.abs(toLongitude(event1.pageX-window.pageXOffset-rect.left)-longitude1) < 20 && Math.abs(toLatitude(event1.pageY-window.pageYOffset-rect.top)-latitude1) < 20){
 		move1Flagg = true;
 	}
 	else if(Math.abs(toLongitude(event1.pageX-window.pageXOffset-rect.left)-longitude2) < 20 && Math.abs(toLatitude(event1.pageY-window.pageYOffset-rect.top)-latitude2) < 20){
